WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
142917
Log the slow-scrolling reasons (if any) on first commit of a ScrollingTreeFrameScrollingNodeMac
https://bugs.webkit.org/show_bug.cgi?id=142917
Summary
Log the slow-scrolling reasons (if any) on first commit of a ScrollingTreeFra...
Simon Fraser (smfr)
Reported
2015-03-20 12:21:48 PDT
Log the slow-scrolling reasons (if any) on first commit of a ScrollingTreeFrameScrollingNodeMac
Attachments
Patch
(4.01 KB, patch)
2015-03-20 12:25 PDT
,
Simon Fraser (smfr)
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2015-03-20 12:25:10 PDT
Created
attachment 249127
[details]
Patch
Simon Fraser (smfr)
Comment 2
2015-03-20 14:33:29 PDT
https://trac.webkit.org/r181813
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug