Log the slow-scrolling reasons (if any) on first commit of a ScrollingTreeFrameScrollingNodeMac https://bugs.webkit.org/show_bug.cgi?id=142917

Reviewed by Beth Dakin.

The scrollperf test would fail to detect transitions between slow and fast scrolling
for new pages, because there was no logging when slow-scrolling scrolling tree was
torn down, and a new fast-scrolling tree constructed.

Fix by always logging the slow-scrolling reasons in the first update of the
ScrollingTreeFrameScrollingNodeMac, even when the slow-scrolling reasons haven't
changed.

* page/scrolling/mac/ScrollingTreeFrameScrollingNodeMac.h:
* page/scrolling/mac/ScrollingTreeFrameScrollingNodeMac.mm:
(WebCore::ScrollingTreeFrameScrollingNodeMac::ScrollingTreeFrameScrollingNodeMac):
(WebCore::ScrollingTreeFrameScrollingNodeMac::updateBeforeChildren):

Canonical link: https://commits.webkit.org/160945@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181813 268f45cc-cd09-0410-ab3c-d52691b4dbfc